QTBL-79 fixing issue with overlapping menu

--- a/sites/all/themes/custom/thinkabit/css/thinkabit.no-query.css
+++ b/sites/all/themes/custom/thinkabit/css/thinkabit.no-query.css
@@ -3460,28 +3460,30 @@ body.section-lab .landing-header {
 
 /* line 1, ../sass/components/_landing-page.scss */
 .landing-header {
+  position: relative;
+  z-index: -1;
   padding: 80px 30px 30px;
   background-color: #0095a8;
   background-size: cover;
   color: #fff; }
-  /* line 11, ../sass/components/_landing-page.scss */
+  /* line 13, ../sass/components/_landing-page.scss */
   .landing-header .field--pretitle {
     font-size: 28px;
     font-size: 1.75rem;
     font-family: "Qualcomm-Semibold", "Arial Bold", Sans-serif;
     line-height: 1; }
-  /* line 24, ../sass/components/_landing-page.scss */
+  /* line 26, ../sass/components/_landing-page.scss */
   .landing-header .field--title-field h1, .landing-header .field--title-field body.node-type-page .field--title-field, body.node-type-page .landing-header .field--title-field .field--title-field, .landing-header .field--title-field body.node-type-blurb .field--title-field, body.node-type-blurb .landing-header .field--title-field .field--title-field, .landing-header .field--title-field body.node-type-leader .field--title-field, body.node-type-leader .landing-header .field--title-field .field--title-field, .landing-header .field--title-field body.node-type-webform .field--title-field, body.node-type-webform .landing-header .field--title-field .field--title-field {
     line-height: .8;
     margin-bottom: 10px;
     margin-bottom: 0.625rem;
     text-transform: uppercase;
     color: #fff; }
-    /* line 30, ../sass/components/_landing-page.scss */
+    /* line 32, ../sass/components/_landing-page.scss */
     .landing-header .field--title-field h1 a, .landing-header .field--title-field body.node-type-page .field--title-field a, body.node-type-page .landing-header .field--title-field .field--title-field a, .landing-header .field--title-field body.node-type-blurb .field--title-field a, body.node-type-blurb .landing-header .field--title-field .field--title-field a, .landing-header .field--title-field body.node-type-leader .field--title-field a, body.node-type-leader .landing-header .field--title-field .field--title-field a, .landing-header .field--title-field body.node-type-webform .field--title-field a, body.node-type-webform .landing-header .field--title-field .field--title-field a {
       color: #fff;
       text-decoration: none; }
-  /* line 37, ../sass/components/_landing-page.scss */
+  /* line 39, ../sass/components/_landing-page.scss */
   .landing-header .field--subtitle {
     font-size: 16px;
     font-size: 1rem;
@@ -3579,7 +3581,7 @@ body.section-leadership .landing-header {
     font-size: 21px;
     font-size: 1.3125rem; }
 
-/* line 10, ../sass/components/_menu.scss */
+/* line 11, ../sass/components/_menu.scss */
 .responsive-menus.responsified span.toggler {
   position: relative;
   background: #fff;
@@ -3596,7 +3598,7 @@ body.section-leadership .landing-header {
   text-align: left;
   text-transform: capitalize;
   padding: 0; }
-  /* line 30, ../sass/components/_menu.scss */
+  /* line 31, ../sass/components/_menu.scss */
   .responsive-menus.responsified span.toggler:before {
     position: absolute;
     top: 15px;
@@ -3606,27 +3608,27 @@ body.section-leadership .landing-header {
     height: 14px;
     content: "";
     display: inline-block; }
-  /* line 45, ../sass/components/_menu.scss */
+  /* line 46, ../sass/components/_menu.scss */
   .responsive-menus.responsified span.toggler:hover:before {
     background: url('../images/generated/icons-sa57b30c793.png') 0 -170px no-repeat;
     width: 18px;
     height: 14px;
     content: "";
     display: inline-block; }
-  /* line 54, ../sass/components/_menu.scss */
+  /* line 55, ../sass/components/_menu.scss */
   .responsive-menus.responsified span.toggler:after {
     position: absolute;
     top: 12px;
     left: 50px;
     content: "Menu";
     text-indent: 0; }
-  /* line 70, ../sass/components/_menu.scss */
+  /* line 71, ../sass/components/_menu.scss */
   .responsive-menus.responsified span.toggler:hover {
     color: #0095a8; }
-/* line 77, ../sass/components/_menu.scss */
+/* line 78, ../sass/components/_menu.scss */
 .responsive-menus.responsified.responsive-toggled span.toggler {
   border: 0; }
-  /* line 80, ../sass/components/_menu.scss */
+  /* line 81, ../sass/components/_menu.scss */
   .responsive-menus.responsified.responsive-toggled span.toggler:before {
     background: url('../images/generated/icons-sa57b30c793.png') 0 -134px no-repeat;
     width: 19px;
@@ -3635,18 +3637,18 @@ body.section-leadership .landing-header {
     display: inline-block;
     text-indent: 0;
     top: 13px; }
-  /* line 92, ../sass/components/_menu.scss */
+  /* line 93, ../sass/components/_menu.scss */
   .responsive-menus.responsified.responsive-toggled span.toggler:hover:before {
     background: url('../images/generated/icons-sa57b30c793.png') 0 -116px no-repeat;
     width: 19px;
     height: 18px;
     content: "";
     display: inline-block; }
-  /* line 97, ../sass/components/_menu.scss */
+  /* line 98, ../sass/components/_menu.scss */
   .responsive-menus.responsified.responsive-toggled span.toggler:after {
     content: "Close";
     text-indent: 0; }
-/* line 103, ../sass/components/_menu.scss */
+/* line 104, ../sass/components/_menu.scss */
 .responsive-menus.responsified.responsive-toggled:after {
   content: "";
   display: block;
@@ -3658,7 +3660,7 @@ body.section-leadership .landing-header {
   background: #363636;
   opacity: .86;
   z-index: 1; }
-/* line 121, ../sass/components/_menu.scss */
+/* line 122, ../sass/components/_menu.scss */
 .responsive-menus.responsified.responsive-toggled .responsive-menus-simple {
   background: #363636;
   border-radius: 0;
@@ -3670,21 +3672,21 @@ body.section-leadership .landing-header {
   top: 42px;
   left: 0;
   z-index: 999; }
-  /* line 151, ../sass/components/_menu.scss */
+  /* line 152, ../sass/components/_menu.scss */
   .responsive-menus.responsified.responsive-toggled .responsive-menus-simple ul {
     padding: 20px 10px 80px 40px; }
-  /* line 160, ../sass/components/_menu.scss */
+  /* line 161, ../sass/components/_menu.scss */
   .responsive-menus.responsified.responsive-toggled .responsive-menus-simple li a {
     position: relative;
     border-bottom: 0;
     color: #fff;
     display: block;
     padding: 6px 10px; }
-  /* line 181, ../sass/components/_menu.scss */
+  /* line 182, ../sass/components/_menu.scss */
   .responsive-menus.responsified.responsive-toggled .responsive-menus-simple li:last-child {
     padding-top: 60px;
     margin-left: -10px; }
-    /* line 190, ../sass/components/_menu.scss */
+    /* line 191, ../sass/components/_menu.scss */
     .responsive-menus.responsified.responsive-toggled .responsive-menus-simple li:last-child a {
       text-transform: none; }
 
