--- a/sites/all/themes/custom/thinkabit/sass/components/_landing-page.scss
+++ b/sites/all/themes/custom/thinkabit/sass/components/_landing-page.scss
@@ -1,4 +1,6 @@
 .landing-header {
+	position: relative;
+	z-index: -1;
 	padding: 80px 30px 30px;
 	background-color: $color-green;
 	background-size: cover;
